MIS section definitions

--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -271,7 +271,7 @@ have local scope.}
 \subsubsection{Local Functions}
     Any helper methods used internally to combine or transform the data (e.g., formatting label lists, summarizing object data) are not exported and thus not specified here.
 
-    
+
 % OG
 \section{MIS of Label Database Connector} \label{ldbc} 
 \subsection{Module}
@@ -312,7 +312,14 @@ have local scope.}
 \subsubsection{Local Functions}
     None
 
+% OG
+\section{MIS of Objects Database Connector} \label{ooidbc} 
 
+% OG
+\section{MIS of Image Database Connector} \label{ridbc} 
+
+% OG
+\section{MIS of Project Database Connector} \label{pdbc} 
 
 
 
