--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -881,7 +881,7 @@ to be implemented.
 \item[Services:] Selects an image to show to a given user. 
 \item[Implemented By:] [OrbitWatch]
 \item[Type of Module:] [Abstract Object]
-
+\end{description}
 
 \subsubsection{ModelComparision Evaluation (\mref{modelcomparison})}
 \begin{description}
