--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -54,8 +54,7 @@ urlcolor=cyan          % color of external links
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Notes\\
-Date 2 & 1.1 & Notes\\
+Date January 17th & 1.0 & \\
 \bottomrule
 \end{tabularx}
 
@@ -76,11 +75,11 @@ See SRS Documentation at \wss{https://github.com/OKKM-insights/OKKM.insights/tre
 \section{Introduction}
 
 The following document details the Module Interface Specifications for
-\wss{Fill in your project name and description}
+OrbitWatch, a crowdsourced datalabelling platform which aims to improve the process of extracting information from satelite images.
 
 Complementary documents include the System Requirement Specifications
 and Module Guide.  The full documentation and implementation can be
-found at \url{...}.  \wss{provide the url for your repo}
+found at \url{https://github.com/OKKM-insights/OKKM.insights/}
 
 \section{Notation}
 
