--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -477,7 +477,7 @@ None
 
     \subsection{Uses}
         ProjectCollectionManager \ref{pcm}\\
-        ProjectDBConnector \ref{cidbc}
+        CoreImageDBConnector \ref{cidbc}
 
     \subsection{Syntax}
     \subsubsection{Exported Constants}
