--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -288,7 +288,7 @@ Image
 
 
 
-\begin{table}[h!]
+\begin{longtable}[h!]
   \centering
   \begin{tabular}{p{0.3\textwidth} p{0.6\textwidth}}
   \toprule
@@ -360,7 +360,7 @@ Image
   \end{tabular}
   \caption{Module Hierarchy}
   \label{TblMH}
-  \end{table}
+  \end{longtable}
   
 
 
@@ -1018,7 +1018,7 @@ SE10 & \mref{accdc}, \mref{ImageObject database connector}, \mref{Labeller datab
 
 \end{longtable}
 
-\begin{table}[H]
+\begin{longtable}[H]
 \centering
 \begin{tabular}{p{0.2\textwidth} p{0.6\textwidth}}
 \toprule
@@ -1040,7 +1040,7 @@ SE10 & \mref{accdc}, \mref{ImageObject database connector}, \mref{Labeller datab
 \end{tabular}
 \caption{Trace Between Anticipated Changes and Modules}
 \label{TblACT}
-\end{table}
+\end{longtable}
 
 \section{Use Hierarchy Between Modules} \label{SecUse}
 
