--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -54,7 +54,7 @@ urlcolor=cyan          % color of external links
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date January 17th & 1.0 & \\
+January 17th & 1.0 & \\
 \bottomrule
 \end{tabularx}
 
@@ -257,13 +257,20 @@ Represents annotations made by a labeller, linking to specific objects in an ima
     \item \textbf{timestamp}
     \item \textbf{labeller\_id}
 \end{itemize}
+The following diagrams describe the classes in more detail:\\
+
+\includegraphics[scale=0.5]{dt3.png}\\
+\includegraphics[scale=0.5]{dt4.png}\\
+\includegraphics[scale=0.5]{dt1.png}\\
+\includegraphics[scale=0.5]{dt2.png}\\
+\includegraphics[scale=0.5]{dt5.png}\\
 
 
 \section{Module Decomposition}
 
 The following table is taken directly from the Module Guide document for this project.
 
-\begin{table}[h!]
+\begin{longtable}[h!]
   \centering
   \begin{tabular}{p{0.3\textwidth} p{0.6\textwidth}}
   \toprule
@@ -282,7 +289,7 @@ The following table is taken directly from the Module Guide document for this pr
    & Labeler\\
    & Client\\
    & User\\
-   & Satellite Image Request Interface\\
+   & Satellite Image Request Interface\\ 
    & Satellite Image Request\\
    & Project Creation Interface\\
    & Project\\
@@ -335,7 +342,7 @@ The following table is taken directly from the Module Guide document for this pr
   \end{tabular}
   \caption{Module Hierarchy}
   \label{TblMH}
-  \end{table}
+  \end{longtable}
 
 \newpage
 ~\newpage
@@ -347,7 +354,7 @@ The following table is taken directly from the Module Guide document for this pr
 
 \wss{It is also possible to use \LaTeX for hypperlinks to external documents.}
 
-\subsection{Module}
+\subsection{Module}  
 
 \wss{Short name for the module}
 
