--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -141,16 +141,17 @@ adapted here is called design for
 change.
 
 \begin{description}
-\item[\refstepcounter{acnum} \actheacnum \label{acHardware}:] The specific
-  hardware on which the software is running.
-\item[\refstepcounter{acnum} \actheacnum \label{acInput}:] The format of the
-  initial input data.
-\item ...
+\item[\refstepcounter{acnum} \actheacnum \label{acHardware}:] Change in labeling tool(s) used or the introduction of additional labeling tools.
+\item[\refstepcounter{acnum} \actheacnum \label{acInput}:] Change in form parameters for project creation and account registration workflows.
+\item[\refstepcounter{acnum} \actheacnum \label{acPresentation}:] Change in the set and presentation of project statistics displayed to clients.
+\item[\refstepcounter{acnum} \actheacnum \label{acImagePriors}:] Changes in algorithms used to calculate image priors.
+\item[\refstepcounter{acnum} \actheacnum \label{acObjectExtr}:] Changes in algorithms for object extraction from images.
+\item[\refstepcounter{acnum} \actheacnum \label{acExpertLabel}:] Changes in algorithms that update and refine labeller expertise metrics.
+\item[\refstepcounter{acnum} \actheacnum \label{acImageServe}:] Changes in image serving and distribution algorithms.
+\item[\refstepcounter{acnum} \actheacnum \label{acPlanetLabs}:] Change in automated image retrieval methods from the PlanetLabs image provider.
+
 \end{description}
 
-\wss{Anticipated changes relate to changes that would be made in requirements,
-design or implementation choices.  They are not related to changes that are made
-at run-time, like the values of parameters.}
 
 \subsection{Unlikely Changes} \label{SecUchange}
 
