--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -149,7 +149,11 @@ change.
 \item[\refstepcounter{acnum} \actheacnum \label{acExpertLabel}:] Changes in algorithms that update and refine labeller expertise metrics.
 \item[\refstepcounter{acnum} \actheacnum \label{acImageServe}:] Changes in image serving and distribution algorithms.
 \item[\refstepcounter{acnum} \actheacnum \label{acPlanetLabs}:] Change in automated image retrieval methods from the PlanetLabs image provider.
-
+\item[\refstepcounter{acnum} \actheacnum \label{acImageProvider}:] Change in satellite image providers or addition of multiple providers, requiring adjustments in data ingestion modules.
+\item[\refstepcounter{acnum} \actheacnum \label{acMoneyModel}:] Change in the compensation model or payment distribution logic for labellers and stakeholders.
+\item[\refstepcounter{acnum} \actheacnum \label{acCloud}:] Change in backend hosting services (e.g., switching or integrating additional cloud providers beyond AWS/Azure) affecting deployment modules.
+\item[\refstepcounter{acnum} \actheacnum \label{acConsensus}:] Change in consensus algorithms or user accuracy models used to resolve labeling conflicts, impacting the data validation modules.
+\item[\refstepcounter{acnum} \actheacnum \label{acLegal}:] Change in regulatory compliance or data privacy requirements, necessitating adjustments in data handling and storage modules.
 \end{description}
 
 
