--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -162,9 +162,10 @@ will potentially need to be modified. Hence, it is not intended that these
 decisions will be changed.
 
 \begin{description}
-\item[\refstepcounter{ucnum} \uctheucnum \label{ucIO}:] Input/Output devices
-  (Input: File and/or Keyboard, Output: File, Memory, and/or Screen).
-\item ...
+\item[\refstepcounter{ucnum} \uctheucnum \label{ucUsers}:] The predefined user access levels and roles (e.g., admin, labeller, client) are considered stable.
+\item[\refstepcounter{ucnum} \uctheucnum \label{ucDB}:] The choice of database technology (e.g., relational database like PostgreSQL) and its core schema structure is fixed early on. 
+\item[\refstepcounter{ucnum} \uctheucnum \label{ucTech}:] The foundational languages and frameworks selected for development (e.g., Node.js for backend services, React for frontend) are assumed to remain constant.
+
 \end{description}
 
 \section{Module Hierarchy} \label{SecMH}
