--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -163,8 +163,9 @@ decisions will be changed.
 
 \begin{description}
 \item[\refstepcounter{ucnum} \uctheucnum \label{ucUsers}:] The predefined user access levels and roles (e.g., admin, labeller, client) are considered stable.
-\item[\refstepcounter{ucnum} \uctheucnum \label{ucDB}:] The choice of database technology (e.g., relational database like PostgreSQL) and its core schema structure is fixed early on. 
-\item[\refstepcounter{ucnum} \uctheucnum \label{ucTech}:] The foundational languages and frameworks selected for development (e.g., Node.js for backend services, React for frontend) are assumed to remain constant.
+\item[\refstepcounter{ucnum} \uctheucnum \label{ucDB}:] The choice of database technology (e.g., relational database) and its core schema structure is fixed early on. 
+\item[\refstepcounter{ucnum} \uctheucnum \label{ucTech}:] The foundational languages and frameworks selected for development (e.g., Node.js for backend services, Typescript for frontend) are assumed to remain constant.
+\item[\refstepcounter{ucnum} \uctheucnum \label{ucArch}:] Decisions around the overall architectural pattern (such as microservices) are made early and considered stable.
 
 \end{description}
 
