linked to existing connectors

--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -236,7 +236,7 @@ have local scope.}
 \subsection{Uses}
     LabelDBConnector \ref{ldbc}\\
     ObjectsOnImageDBConnector \ref{odbc}\\
-    RawImageDBConnector \ref{ridbc}\\
+    RawImageDBConnector \ref{cidbc}\\
     ProjectDBConnector \ref{pdbc}
 
 \subsection{Syntax}
@@ -352,11 +352,8 @@ have local scope.}
 \subsubsection{Local Functions}
     None
 
-% OG
-\section{MIS of Image Database Connector} \label{ridbc} 
 
-% OG
-\section{MIS of Project Database Connector} \label{pdbc} 
+
 
 
 
