--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -234,8 +234,8 @@ have local scope.}
     RM (ReportManager)
 
 \subsection{Uses}
-    LabelDBConnector \ref{ldbc}\\
-    ObjectsOnImageDBConnector \ref{odbc}\\
+    LabelDBConnector \ref{label database connector}\\
+    ObjectsOnImageDBConnector \ref{ImageObject database connector}\\
     RawImageDBConnector \ref{cidbc}\\
     ProjectDBConnector \ref{pdbc}
 
