--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -1991,6 +1991,7 @@ Project Creation Controller
 
 \subsection{Uses}
 
+Project Manager \ref{pm}\\
 Project Creation Interface \ref{pci}\\
 Project \ref{project} \\
 
@@ -2193,6 +2194,7 @@ Image Upload Interface
 
 \subsection{Uses}
 
+Project Manager \ref{pm}\\
 
 \subsection{Syntax}
 
@@ -2472,6 +2474,7 @@ Project Selection Controller
 
 \subsection{Uses}
 
+Project Collection Manager \ref{pcm}\\
 Project Selection Interface \ref{psi}\\
 Project \ref{project} \\
 
