--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -59,7 +59,7 @@ This section records information for easy reference.
 
 \subsection{Abbreviations and Acronyms}
 
-See SRS Documentation at \wss{https://github.com/OKKM-insights/OKKM.insights/tree/main/docs/SRS}
+See SRS Documentation \href{https://github.com/OKKM-insights/OKKM.insights/tree/main/docs/SRS}{here}
 
 \newpage
 
