--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -362,20 +362,21 @@ In developing the OKKM Insights platform, several critical assumptions have to b
 \section{Safety and Security Requirements}
 
 A comprehensive list of requirements can be found in the \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/SRS/SRS.pdf}{SRS}.
-
+The following requirements were derived from the analysis conducted in the previous sections:
 \subsubsection*{NFR-SE4}
+\begin{itemize}
+  \item \textbf{Description:} The system shall, during system failure, notify users trying to make a request of the system failure.
+  \item \textbf{Rationale:} The system should provide good warning messages to users to prevent additional frustration.
+  \item \textbf{Fit Criterion:} When services are unavailable, the system shall provide an error message to the user making the request of the unavailable service.
+\end{itemize}
+
+\subsubsection*{NFR-SE6}
 \begin{itemize}
   \item \textbf{Description:} The application shall prohibit new user actions when user is disconnected from the system.
   \item \textbf{Rationale:} The system should avoid batch updates upon reconnect as to prevent malicious users creating a false package of updates.
   \item \textbf{Fit Criterion:} Upon user disconnect and reconnect, the system will not accept any updates from the user not submitted before the disconnect occured.
 \end{itemize}
 
-\subsubsection*{NFR-SE6}
-\begin{itemize}
-  \item \textbf{Description:} The system shall, during system failure, notify users trying to make a request of the system failure.
-  \item \textbf{Rationale:} The system should provide good warning messages to users to prevent additional frustration.
-  \item \textbf{Fit Criterion:} When services are unavailable, the system shall provide an error message to the user making the request of the unavailable service.
-\end{itemize}
 
 \subsubsection*{NFR-SE7}
 \begin{itemize}
