Populated Glossary and added link

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -58,7 +58,7 @@ October 25 & Kyle, Kartik, Mathew, Oleg & Rev 0\\
 This document presents the hazard analysis for OrbitWatch, an online application that uses an AI-powered crowdsourcing model to build labeled satellite image datasets.
 A hazard in the context of our application is any condition or event that could lead to undesirable outcomes, such as system failures, data corruption, data leakage, performance degradation, or security vulnerabilities.
 This document aims to detect, analyze, and mitigate potential hazards that are applicable to our application.
-
+Please refer to section 4 in the \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/SRS/SRS.pdf}{SRS} for a glossary of terms.
 \section{Scope and Purpose of Hazard Analysis}
 
 \subsection{Scope}
