--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -241,35 +241,45 @@ N/A
 \section{Naming Conventions and Terminology}
 \subsection{Glossary of All Terms, Including Acronyms, Used by Stakeholders
 involved in the Project}
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|p{0.3\linewidth} | p{0.7\linewidth}| }
+\begin{longtable}{|p{0.3\linewidth} | p{0.7\linewidth}| }
+
     \hline
     \textbf{Term} & \textbf{Definition}\\
     \hline
-    Labelers & Users of our application that will be labeling photos shown to them for a monetary reward\\
+    AC & Anticipated Change\\
     \hline
-    Service Request & Request for the system to analyze one or more related images.\\
+    Confidence & The measure of how likely one believes it is that a predicted value matches the true value.\\
     \hline
     Customers & Users of our application that will initiate requests for image analysis (service requests).\\
     \hline
-    AC & Anticipated Change\\
-    \hline
     DAG & Directed Acyclic Graph \\
+    \hline
+    FR & Functional Requirement \\
+    \hline
+    Image Object & A subset of connected pixels in an image that has been determined by the system to be a part of a certain class, up to a level of confidence.\\
+    \hline
+    Label & A subset of connected pixels in an image which are all considered to be a part of the same class.\\
+    \hline
+    Labeller & A user of the system who is responsible to labeling objects in images for the purpose of object identification\\
     \hline
     M & Module \\
     \hline
     MG & Module Guide \\
     \hline
+    NFR & Non-Functional Requirement \\
+    \hline
     OS & Operating System \\
     \hline
-    R & Requirement\\
+    Req & Requirement\\
+    \hline
+    Service Request & Request for the system to analyze one or more related images.\\
+    \hline
+    Task Delegation & The assignment of tasks to workers by a central authority\\
     \hline
     UC & Unlikely Change \\
     \hline
-    \end{tabular}
     \caption{Naming Conventions and Terminology}
-\end{table}
+\end{longtable}
 \newpage
 \section{Relevant Facts and Assumptions}
 
