--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 
-\title{System Verification and Validation Plan for \progname{}} 
+\title{System Verification and Validation Plan for \progname{}}  
 \author{\authname}
 \date{\today}
 	
@@ -283,14 +283,14 @@ project supervisor using the following checklist:\\\\
 
 \textbf{Class Decomposition}\\
 \begin{todolist}
-  \item All functional requirements are covered by a class/subsystem
-  \item All non-functional requirements are covered by a class/subsystem
+  \item All functional requirements are covered by some subset of classes/subsystems, that is no requirement is left uncovered
+  \item All non-functional requirements are covered by some subset of classes/subsystems, that is no requirement is left uncovered
   \item All classes are correctly sized. That is, each class should be concerned with one purpose
   \item When appropriate, interfaces and abstract classes are used
   \item All class attributes are complete and necessary
   \item When appropriate, design patterns are used to improve design clarity
   \item Function permissions are appropriate for all classes
-  \item Classes cannot be simplified without degrading the understanability of the system
+  \item Classes cannot be simplified without degrading the understandability of the system
   \end{todolist}
   \textbf{General}\\
 \begin{todolist}
@@ -312,8 +312,8 @@ from our primary reviewers, as well as a review with the project supervisor. The
 \textbf{Testing Plan}\\
 \begin{todolist}
   \item Testing plan includes a checklist for each artifact
-  \item Checklist items are unambigious
-  \item Checklist contains all recessary items
+  \item Checklist items are unambiguous
+  \item Checklist contains all necessary items
   \item Checklist does not contain unnecessary items
   \item Plan includes review from multiple parties
   \item Plan includes method for collecting feedback on artifacts
@@ -324,7 +324,7 @@ from our primary reviewers, as well as a review with the project supervisor. The
   \item All functional requirements are covered by one or more tests\\
   \item All non-functional requirements are covered by one or more tests\\
   \item All `units' are sufficiently covered by one or more tests\\
-  \item Tests are unambigious
+  \item Tests are unambiguous
   \item Tests are verifiable
   \item Tests are repeatable
   \end{todolist}
